@@ -3,6 +3,8 @@
 
 New Features:
 
+  * Automatically populate sample JDBC values based on database type on the
+    setup and admin pages.
   * Upgrade to Lucene Search 2.9.1.
 
 Bugfixes:
